--- a/CSharpLabs.csproj
+++ b/CSharpLabs.csproj
@@ -55,6 +55,8 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="StringsValidator.cs" />
+    <Compile Include="Exceptions.cs" />
     <Compile Include="PersonViewModel.cs" />
     <Compile Include="Person.cs" />
     <Compile Include="Zodiacs.cs" />
